--- a/MornSound.asmdef
+++ b/MornSound.asmdef
@@ -5,7 +5,8 @@
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:9fb3b15b1474476cbe64c6bd63468fb6",
-        "GUID:1a328b9299f874e829993ee74d070a37"
+        "GUID:1a328b9299f874e829993ee74d070a37",
+        "GUID:582f8cf2ead042147afbcc4ddbf3909b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
